Fixed span background icon alignment with relative and absolute positioning

--- a/style.css
+++ b/style.css
@@ -83,20 +83,30 @@ body {
 }
 
 .section-title {
-  font-size: 32px;
-  font-weight: 700;
+  position: relative;
+  z-index: 1;
+  font-size: 70px;
+  font-weight: bold;
   margin-bottom: 50px;
   color: black;
 }
 
-.section-title span::after {
+.section-title span {
+  position: relative;
+  display: inline-block;
+  color: black;
+  z-index: -1;
+}
+
+.section-title span::before {
   content: "";
   position: absolute;
-  left: 0;
-  bottom: 3px;
-  width: 100%;
-  height: 5px;
-  background: rgba(245, 180, 0, 0.4);
+  top: 50%;
+  left: 50%;
+  width: 257.97px;   
+  height: 40px;
+  background: url("./images/says.png") no-repeat center/contain;
+  transform: translate(-50%, -50%);
   z-index: -1;
 }
 
